# Weisfeiler-Leman_Rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
outputs/: placeholder.txt
src/: graphwrapper.rs  lib.rs
tests/: 2wl.rs  interface.rs
