[package]
name = "wl"
version = "0.1.0"
edition = "2021"
licence = "MIT"
description = "Implementation of the WL and 2-WL algorithms for graph isomorphism testing"
readme = "README.md"
repository = "https://github.com/Anemoonvis/Weisfeiler-Leman_Rust"
keywords = ["isomorphism", "Weisfeiler-Leman", "graph", "heuristic"]


[dependencies]
twox-hash = "2.0.1"
petgraph = "0.6.5" 
bytemuck = "1.19.0"
palette = "0.7.6" 